# genagent-with-humanmemory

./: .gitignore  README.md  demo.py  install.bat  install.js  installer.py  package.json  pyproject.toml  requirements.txt
examples/: agent_integration.py
human_memory/: __init__.py  agent.py  config.py  database.py  embedding.py  encoding.py  env_file.py  llm.py  memory_manager.py  retrieval.py  working_memory.py
human_memory/models/: __init__.py
tests/: test_memory_system.py
