[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "human-memory"
version = "0.1.0"
description = "Human-like memory system for AI agents"
requires-python = ">=3.11"
dependencies = [
    "sqlite-vec>=0.1.0",
    "numpy>=1.24.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
